[package]
name = "portable-clang"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"

[[bin]]
name = "pclang"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
once_cell = "1.8"
slog = "2.7"
tempfile = "3.2"
tugger-common = "0.5"

[build-dependencies]
serde_json = "1.0"
